[package]
name = "rsdis"
version = "0.1.0"
authors = ["Michał Wawrzynowicz <michalwa2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
serenity = "0.9.1"
tokio = { version = "0.2", features = ["macros"] }
mongodb = "1.1.1"
