[package]
name = "rsdis"
version = "0.1.0"
authors = ["Michał Wawrzynowicz <michalwa2003@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
songbird = "0.1"

[dependencies.tokio]
version = "1.0.1"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.2"
features = ["rustls_backend", "client", "standard_framework", "voice"]

[dependencies.mongodb]
version = "1.1.1"
default-features = false
# Unfortunate, but tokio versions don't match otherwise.
# Mongo, please update your driver.
features = ["sync"]
